bridge/base/db-deployment.yaml
#! db-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: db
    namespace: invester-dev
    labels:
        com.docker.compose.project: invester_dev
        com.docker.compose.service: db
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: invester_dev
            com.docker.compose.service: db
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: invester_dev
                com.docker.compose.service: db
                com.docker.compose.network.pitch_network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: pitch-platform-db
                  image: postgres:15-alpine
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command:
                            - /bin/sh
                            - -c
                            - pg_isready -U postgres
                    periodSeconds: 10
                    timeoutSeconds: 5
                    failureThreshold: 5
                  ports:
                    - name: db-5432
                      containerPort: 5432
                  volumeMounts:
                    - name: var-lib-postgresql-data
                      mountPath: /var/lib/postgresql/data
                    - name: docker-entrypoint-initdb-d-init-sql
                      mountPath: /docker-entrypoint-initdb.d/init.sql
            volumes:
                - name: var-lib-postgresql-data
                  persistentVolumeClaim:
                    claimName: db-postgres-data-v3
                - name: docker-entrypoint-initdb-d-init-sql
                  hostPath:
                    path: C:\Users\divah\OneDrive\Desktop\invester_dev\init.sql
