bridge/base/frontend-deployment.yaml
#! frontend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    namespace: invester-dev
    labels:
        com.docker.compose.project: invester_dev
        com.docker.compose.service: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: invester_dev
            com.docker.compose.service: frontend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: invester_dev
                com.docker.compose.service: frontend
                com.docker.compose.network.pitch_network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: pitch-platform-frontend
                  image: invester_dev-frontend
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: frontend-80
                      containerPort: 80
