bridge/base/startup-backend-deployment.yaml
#! startup-backend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: startup-backend
    namespace: invester-dev
    labels:
        com.docker.compose.project: invester_dev
        com.docker.compose.service: startup-backend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: invester_dev
            com.docker.compose.service: startup-backend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: invester_dev
                com.docker.compose.service: startup-backend
                com.docker.compose.network.pitch_network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: startup-pitch-backend
                  image: invester_dev-startup-backend
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: startup-ba-8000
                      containerPort: 8000
