bridge/base/db-service.yaml
#! db-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: db-published
    namespace: invester-dev
    labels:
        com.docker.compose.project: invester_dev
        com.docker.compose.service: db
spec:
    selector:
        com.docker.compose.project: invester_dev
        com.docker.compose.service: db
    ports:
        - name: db-5433
          port: 5433
          protocol: TCP
          targetPort: db-5432

# check if there is at least one published port
