bridge/base/startup-backend-expose.yaml
#! startup-backend-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: startup-backend
    namespace: invester-dev
    labels:
        com.docker.compose.project: invester_dev
        com.docker.compose.service: startup-backend
spec:
    selector:
        com.docker.compose.project: invester_dev
        com.docker.compose.service: startup-backend
    ports:
        - name: startup-ba-8000
          port: 8000
          targetPort: startup-ba-8000
