bridge/base/startup-backend-service.yaml
#! startup-backend-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: startup-backend-published
    namespace: invester-dev
    labels:
        com.docker.compose.project: invester_dev
        com.docker.compose.service: startup-backend
spec:
    selector:
        com.docker.compose.project: invester_dev
        com.docker.compose.service: startup-backend
    ports:
        - name: startup-ba-8001
          port: 8001
          protocol: TCP
          targetPort: startup-ba-8000

# check if there is at least one published port
