bridge/base/startup-frontend-expose.yaml
#! startup-frontend-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: startup-frontend
    namespace: invester-dev
    labels:
        com.docker.compose.project: invester_dev
        com.docker.compose.service: startup-frontend
spec:
    selector:
        com.docker.compose.project: invester_dev
        com.docker.compose.service: startup-frontend
    ports:
        - name: startup-fr-5173
          port: 5173
          targetPort: startup-fr-5173
