bridge/base/startup-frontend-service.yaml
#! startup-frontend-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: startup-frontend-published
    namespace: invester-dev
    labels:
        com.docker.compose.project: invester_dev
        com.docker.compose.service: startup-frontend
spec:
    selector:
        com.docker.compose.project: invester_dev
        com.docker.compose.service: startup-frontend
    ports:
        - name: startup-fr-3001
          port: 3001
          protocol: TCP
          targetPort: startup-fr-5173
