bridge/base/pitch_network-network-policy.yaml
#! pitch_network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: pitch-network-network-policy
    namespace: invester-dev
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.pitch_network: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.pitch_network: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.pitch_network: "true"
